; ModuleID = '/home/carl/AnghaBench/radare2/libr/egg/extr_emit_arm.c_emit_mathop.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/egg/extr_emit_arm.c_emit_mathop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"eor\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"and\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"orr\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"sub\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"add\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"mul\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"div\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"mov\00", align 1
@R_AX = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [15 x i8] c"  %s %s, [%s]\0A\00", align 1
@.str.9 = private unnamed_addr constant [13 x i8] c"  %s %s, %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i8*, i8*)* @emit_mathop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_mathop(i32* %0, i32 %1, i32 %2, i32 %3, i8* %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i32, i32* %8, align 4
  switch i32 %14, label %22 [
    i32 94, label %15
    i32 38, label %16
    i32 124, label %17
    i32 45, label %18
    i32 43, label %19
    i32 42, label %20
    i32 47, label %21
  ]

15:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %13, align 8
  br label %23

16:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %13, align 8
  br label %23

17:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %13, align 8
  br label %23

18:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %13, align 8
  br label %23

19:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8** %13, align 8
  br label %23

20:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8** %13, align 8
  br label %23

21:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %13, align 8
  br label %23

22:                                               ; preds = %6
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %13, align 8
  br label %23

23:                                               ; preds = %22, %21, %20, %19, %18, %17, %16, %15
  %24 = load i8*, i8** %11, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %28, label %26

26:                                               ; preds = %23
  %27 = load i8*, i8** @R_AX, align 8
  store i8* %27, i8** %11, align 8
  br label %28

28:                                               ; preds = %26, %23
  %29 = load i8*, i8** %12, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %33, label %31

31:                                               ; preds = %28
  %32 = load i8*, i8** @R_AX, align 8
  store i8* %32, i8** %12, align 8
  br label %33

33:                                               ; preds = %31, %28
  %34 = load i32, i32* %10, align 4
  %35 = icmp eq i32 %34, 42
  br i1 %35, label %36, label %42

36:                                               ; preds = %33
  %37 = load i32*, i32** %7, align 8
  %38 = load i8*, i8** %13, align 8
  %39 = load i8*, i8** %12, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @r_egg_printf(i32* %37, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.8, i64 0, i64 0), i8* %38, i8* %39, i8* %40)
  br label %48

42:                                               ; preds = %33
  %43 = load i32*, i32** %7, align 8
  %44 = load i8*, i8** %13, align 8
  %45 = load i8*, i8** %12, align 8
  %46 = load i8*, i8** %11, align 8
  %47 = call i32 @r_egg_printf(i32* %43, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.9, i64 0, i64 0), i8* %44, i8* %45, i8* %46)
  br label %48

48:                                               ; preds = %42, %36
  ret void
}

declare dso_local i32 @r_egg_printf(i32*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
